# finhouse

./: .gitmodules  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
assets/: icon-1024.pdn  manifest.json  sw.js
src/: lib.rs  main.rs
src/app/: entry.rs  finhouse.rs  main_app.rs  main_content.rs  mod.rs  side_bar.rs  top_bar.rs
src/app/entry/: currency_impl.rs  entry_impl.rs  mod.rs  utility.rs  widget_impl.rs
