[package]
name = "finhouse"
version = "0.1.0"
authors = ["fjodborg"]
edition = "2021"
rust-version = "1.80"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.28"
egui_plot = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4.22"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "=0.3.69", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
] }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2
